force-app/main/default/objects/Contact/fields/Amazon_Business_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Business_Account_Number__c</fullName>
    <label>Amazon Business Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>