force-app/main/default/objects/Contact/fields/Associate_with_Referral__c.field-meta.xml
<CustomField>
    <fullName>Associate_with_Referral__c</fullName>
    <inlineHelpText>Giiven name as printed on paycheck</inlineHelpText>
    <label>Store Associate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>