force-app/main/default/objects/Contact/fields/Contact_is_added_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Contact_is_added_to_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for 2015 1H Lost Accounts Call Campaign to create sharing rule for IST.</description>
    <label>Contact is added to Campaign</label>
    <type>Checkbox</type>
</CustomField>