force-app/main/default/objects/Contact/fields/Contact_Phone_for_Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_for_Sales_Associate__c</fullName>
    <label>Store Associate Phone Number</label>
    <type>Phone</type>
</CustomField>