force-app/main/default/objects/Contact/fields/Create_SCO_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_SCO_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person requesting access to SCO</description>
    <label>Create SCO Contact</label>
    <type>Checkbox</type>
</CustomField>