force-app/main/default/objects/Contact/fields/Delivery_Order_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Minimum__c</fullName>
    <inlineHelpText>Enter the minimum delivery charge for SearsCommercial.com</inlineHelpText>
    <label>Delivery:  Order Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>