force-app/main/default/objects/Contact/fields/Delivery_Per_Piece_Rate__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Per_Piece_Rate__c</fullName>
    <inlineHelpText>Enter the per piece delivery rate for SearsCommercial.com</inlineHelpText>
    <label>Delivery: Per Piece Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>