force-app/main/default/objects/Contact/fields/FN__Lat__c.field-meta.xml
<CustomField>
    <fullName>FN__Lat__c</fullName>
    <label>Contact Lat</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>