force-app/main/default/objects/Contact/fields/Is_this_customer_eligible_for_best_price__c.field-meta.xml
<CustomField>
    <fullName>Is_this_customer_eligible_for_best_price__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the customer will receive either Sears Commercial Pricing or sears.com sale price – which ever of the two is lower.  The customer will receive the best price of the two.</inlineHelpText>
    <label>Is this customer eligible for best price</label>
    <type>Checkbox</type>
</CustomField>