force-app/main/default/objects/Contact/fields/Key3__c.field-meta.xml
<CustomField>
    <fullName>Key3__c</fullName>
    <description>Data.Key field populates based on Key 3 value</description>
    <inlineHelpText>Data.Key field populates based on Key 3 value</inlineHelpText>
    <label>Key3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>