force-app/main/default/objects/Contact/fields/Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if appropriate to send printed marketing materials to this contact</description>
    <inlineHelpText>Check box if appropriate to send printed marketing materials to this contact</inlineHelpText>
    <label>Marketing Contact</label>
    <type>Checkbox</type>
</CustomField>