force-app/main/default/objects/Contact/fields/NAICS_2__c.field-meta.xml
<CustomField>
    <fullName>NAICS_2__c</fullName>
    <label>NAICS 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>