force-app/main/default/objects/Contact/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <inlineHelpText>2-digit to 8-digit code representing the market segment of the company with which you are doing business</inlineHelpText>
    <label>NAICS Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>