force-app/main/default/objects/Contact/fields/of_Catalogues__c.field-meta.xml
<CustomField>
    <fullName>of_Catalogues__c</fullName>
    <label># of Catalogues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>