force-app/main/default/objects/Contact/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Main point of contact for marketing, sales, and reporting purposes</description>
    <inlineHelpText>Main point of contact for marketing, sales, and reporting purposes</inlineHelpText>
    <label>Point of Contact</label>
    <type>Checkbox</type>
</CustomField>