force-app/main/default/objects/Contact/fields/Provide_AM_Access_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Provide_AM_Access_to_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to request AM&#39;s to be provided access to the eCommerce site in order to help setup lists and pricings for their customers.</description>
    <inlineHelpText>Request access to your customers eCommerce site inorder to help establish lists and pricing</inlineHelpText>
    <label>Provide AM Access to Account</label>
    <type>Checkbox</type>
</CustomField>