force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Defines the contact&#39;s role type</description>
    <inlineHelpText>Defines the contact&#39;s role type</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Delivery/Operations</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Appliance Select</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DDC</fullName>
            </value>
            <value>
                <fullName>MDO</fullName>
            </value>
            <value>
                <fullName>Market Manager</fullName>
            </value>
            <value>
                <fullName>Market Operations Manager</fullName>
            </value>
            <value>
                <fullName>Regional Operations Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>