force-app/main/default/objects/Contact/fields/SAP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_ID__c</fullName>
    <description>Hidden Field for reporting and Campaign purposes</description>
    <formula>Account.SAP_Account_ID__c</formula>
    <inlineHelpText>Hidden Field for reporting and Campaign purposes</inlineHelpText>
    <label>SAP Account ID</label>
    <type>Text</type>
</CustomField>