force-app/main/default/objects/Contact/fields/SCO_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SCO_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>SCO Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>