force-app/main/default/objects/Contact/fields/SCOPES_Offline_Del_Rate_same_as_online__c.field-meta.xml
<CustomField>
    <fullName>SCOPES_Offline_Del_Rate_same_as_online__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include Online Delivery Rate as SCOPES note for offline orders</inlineHelpText>
    <label>SCOPES Offline Del Rate same as online</label>
    <type>Checkbox</type>
</CustomField>