force-app/main/default/objects/Contact/fields/Send_Catalog_on_CD__c.field-meta.xml
<CustomField>
    <fullName>Send_Catalog_on_CD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Commercial users, check this box in order to have an electronic copy of the 2010 Sears Commercial Catalog sent to your customers.  Initial shipment will occur by or before October and shipments will be sent weekly thereafter.</inlineHelpText>
    <label>Send Catalog (on CD)</label>
    <type>Checkbox</type>
</CustomField>