force-app/main/default/objects/Contact/fields/Send_eNewsletter__c.field-meta.xml
<CustomField>
    <fullName>Send_eNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send eNewsletter</label>
    <type>Checkbox</type>
</CustomField>