force-app/main/default/objects/Contact/fields/Send_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Feedback_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Feedback Survey</label>
    <type>Checkbox</type>
</CustomField>