force-app/main/default/objects/Contact/fields/Store_Associate_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Associate_Employee_Number__c</fullName>
    <label>Store Associate Employee Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>