force-app/main/default/objects/Contact/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>