force-app/main/default/objects/Contact/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>