force-app/main/default/objects/Contact/fields/User_Account_Setup_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Setup_Status__c</fullName>
    <inlineHelpText>When a user account is requested, it will be setup by the File Administration team. Once setup, the File Admin team will update this field sending you a notification of completion.</inlineHelpText>
    <label>User Account Setup Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Not Set-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>