force-app/main/default/objects/Contact/fields/User_Account_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Special_Notes__c</fullName>
    <inlineHelpText>Use this field for additional instructions or special notes.</inlineHelpText>
    <label>User Account Special Notes</label>
    <type>TextArea</type>
</CustomField>