force-app/main/default/objects/Contact/fields/User_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Type__c</fullName>
    <inlineHelpText>Select User to register this Contact for setup on the E-Commerse site</inlineHelpText>
    <label>User Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>