force-app/main/default/objects/Contact/validationRules/Contact_State_only_2_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_State_only_2_characters</fullName>
    <active>true</active>
    <description>Mailing State/Provide must be 2 characters in capital letters (i.e. AL, GA, FL, etc.)</description>
    <errorConditionFormula>AND ( IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
OR( MailingCountry = &quot;US&quot;, MailingCountry=&quot;PR&quot;, MailingCountry=&quot;UK&quot;,MailingCountry=&quot;CA&quot;,MailingCountry=&quot;GU&quot;,MailingCountry=&quot;CN&quot;, MailingCountry=&quot;DC&quot;,MailingCountry=&quot;AW&quot;,ISBLANK(MailingCountry)), 
NOT( 
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp; 
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp; 
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp; 
&quot;WA:WV:WI:WY:BC:AB:HK:VI:ON:AS:MP:PR:&quot;, MailingState ) 
))</errorConditionFormula>
    <errorDisplayField>MailingState</errorDisplayField>
    <errorMessage>Mailing State/Provide must be 2 characters in capital letters (i.e. AL, GA, FL, etc.)</errorMessage>
</ValidationRule>