force-app/main/default/objects/Contact/validationRules/User_Accout_Type_True_Customer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Accout_Type_True_Customer_Required</fullName>
    <active>true</active>
    <description>When User Account Type = True then Customer is Required on the Account Type</description>
    <errorConditionFormula>AND( IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
NOT( ISBLANK(  TEXT( User_Account_Type__c )  ) ),
NOT( ISPICKVAL( Account.Type , &quot;Customer&quot;) ) )</errorConditionFormula>
    <errorMessage>On the Account record, Type needs to be changed to &quot;Customer&quot; if you fill in the User Account Type field</errorMessage>
</ValidationRule>