force-app/main/default/objects/Contact/validationRules/User_Accout_Type_User_Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Accout_Type_User_Name_required</fullName>
    <active>true</active>
    <description>When User Account Type = True then First Name is required</description>
    <errorConditionFormula>AND(IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISPICKVAL( User_Account_Type__c, &quot;User&quot;), 
ISBLANK( FirstName))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>When User Account Type is True then First Name required</errorMessage>
</ValidationRule>