force-app/main/default/objects/Contact/listViews/Inside_Sales_Reactivation.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Reactivation</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN_MEMBER.STATUS</field>
        <operation>notEqual</operation>
        <value>AM Working,Disqualified</value>
    </filters>
    <label>Inside Sales Reactivation</label>
    <sharedTo>
        <group>Inside_Sales</group>
    </sharedTo>
</ListView>