force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>User_Account_Setup_Status__c</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Role__c</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>User_Account_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>