force-app/main/default/objects/Contact/listViews/Operation_Storm_Call.listView-meta.xml
<ListView>
    <fullName>Operation_Storm_Call</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>notContain</operation>
        <value>MI</value>
    </filters>
    <label>Operation Storm Call</label>
</ListView>