force-app/main/default/objects/Contact/listViews/searshc_com_Contacts.listView-meta.xml
<ListView>
    <fullName>searshc_com_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>kenmoredirect.com</value>
    </filters>
    <label>searshc.com Contacts</label>
</ListView>